distclean target has been added

--- a/Makefile.win32
+++ b/Makefile.win32
@@ -23,3 +23,8 @@ clean do_install includes :
 		) \
 	)
 
+distclean:
+	@-rmdir /S /Q packages
+	@FOR /D %%I IN ("fbreader-*") DO @( \
+		rmdir /S /Q "%%I" \
+	)
